依存関係プロパティ List<object> SeItemsList を定義 一度設定すればいいだけなのでCLRプロパティにしようとしたところBindingは依存関係プロパティでしか使えないとおこられた

--- a/SELabelControl/SELabelControl.csproj
+++ b/SELabelControl/SELabelControl.csproj
@@ -84,5 +84,11 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{CF3C9344-7347-4803-96C0-A49C80937366}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
