ローマ字カタカナ変換の埋め込み

--- a/SELabelControl/SELabelControl.csproj
+++ b/SELabelControl/SELabelControl.csproj
@@ -48,6 +48,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RomajiToKana.cs" />
     <Compile Include="SELabel.cs" />
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +90,11 @@
       <Project>{CF3C9344-7347-4803-96C0-A49C80937366}</Project>
       <Name>Interfaces</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RomaToKanaTable.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
