--- a/SELabelControl/SELabelControl.csproj
+++ b/SELabelControl/SELabelControl.csproj
@@ -48,7 +48,6 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RomajiToKana.cs" />
     <Compile Include="SELabel.cs" />
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -86,15 +85,18 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\DevelopTransferRomaToKana\ConverterRomanLettersToKana\ConverterRomanLettersToKana.csproj">
+      <Project>{7bd2612b-e806-48b1-bb37-d37a7a93b9a1}</Project>
+      <Name>ConverterRomanLettersToKana</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InterfaceKanaConverter\InterfaceKanaConverter.csproj">
+      <Project>{519e8e67-7ef4-4b51-ac74-1b7e94dfab67}</Project>
+      <Name>InterfaceKanaConverter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{CF3C9344-7347-4803-96C0-A49C80937366}</Project>
       <Name>Interfaces</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="RomaToKanaTable.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
